--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,27 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<html lang="pl">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+        <title>{% block title %} {% endblock %}</title>
+        <link rel="stylesheet" href="{% static "css/style.css" %}"/>
+    </head>
 
-</body>
+    <body>
+        {% block header %}
+            <header>
+                {% include "nav.html" %}
+            </header>
+         {% endblock %}
+        {% block content %} {% endblock %}
+    </body>
+
+    {% block footer %}
+        {% include "footer.html" %}
+    {% endblock footer %}
+
+    <script src={% static "js/app.js" %}></script>
+
 </html>
