--- a/templates/index.html
+++ b/templates/index.html
@@ -92,8 +92,11 @@
                 zbiórkom</a></li>
         </ul>
 
+        {% for institution in institution_list %}
         <!-- SLIDE 1 -->
+        {% if institution.institution_type == 'FUND' %}
         <div class="help--slides active" data-id="1">
+
             <p>W naszej bazie znajdziesz listę zweryfikowanych Fundacji, z
                 którymi współpracujemy. Możesz sprawdzić czym się zajmują, komu
                 pomagają i czego potrzebują.</p>
@@ -101,45 +104,21 @@
             <ul class="help--slides-items">
                 <li>
                     <div class="col">
-                        <div class="title">Fundacja "Dbam o Zdrowie"</div>
-                        <div class="subtitle">Cel i misja: Pomoc dzieciom z
-                            ubogich rodzin.
+                        <div class="title">{{ institution.name }}</div>
+                        <div class="subtitle">{{ institution.description }}
+                                </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="text">
+                            {% for category in institution.categories.values %}
+                                {{ category.name }}
+                            {% endfor %}
                         </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">ubrania, jedzenie, sprzęt AGD, meble,
-                            zabawki
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Fundacja “Dla dzieci"</div>
-                        <div class="subtitle">Cel i misja: Pomoc osobom
-                            znajdującym się w trudnej sytuacji życiowej.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">ubrania, meble, zabawki</div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Fundacja “Bez domu”</div>
-                        <div class="subtitle">Cel i misja: Pomoc dla osób nie
-                            posiadających miejsca zamieszkania
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">ubrania, jedzenie, ciepłe koce</div>
                     </div>
                 </li>
             </ul>
+
             <!-- Pagination
             <ul class="help--slides-pagination">
               <li><a href="#" class="btn btn--small btn--without-border active" data-page="1">1</a></li>
@@ -151,71 +130,25 @@
 
 
         <!-- SLIDE 2 -->
+        {% elif institution.institution_type == 'NGOV' %}
         <div class="help--slides" data-id="2">
-            <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hic
-                officiis mollitia dolor, neque aspernatur accusamus debitis.
-                Ducimus, officia. Quia, sunt illum! Non iste placeat ab ipsum
-                alias
-                quos suscipit corporis!
+            <p>W naszej bazie znajdziesz listę zweryfikowanych Organizacji
+                pozarządowych, z którymi współpracujemy. Możesz sprawdzić czym
+                się zajmują, komu pomagają i czego potrzebują.
             </p>
             <ul class="help--slides-items">
                 <li>
                     <div class="col">
-                        <div class="title">Organizacja 1</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
+                        <div class="title">{{ institution.name }}</div>
+                        <div class="subtitle">{{ institution.description }}
                         </div>
                     </div>
 
                     <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Organizacja 2</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Organizacja 3</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Organizacja 4</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
+                        <div class="text">
+                            {% for category in institution.categories.values %}
+                                {{ category.name }}
+                            {% endfor %}
                         </div>
                     </div>
                 </li>
@@ -233,37 +166,24 @@
         </div>
 
         <!-- SLIDE 3 -->
+        {% elif institution.institution_type == 'CHAR' %}
         <div class="help--slides" data-id="3">
-            <p>Lorem ipsum dolor sit amet, his ocurreret persequeris ea, ad
-                utinam laudem duo. Verterem adipisci partiendo eos ne, ea his
-                reque quaeque recteque, ne quo lobortis intellegam.</p>
+            <p>W naszej bazie znajdziesz listę zweryfikowanych lokalnych
+                zbiórek. Możesz sprawdzić jaki jest cel zbiórki i
+                jakie są najpilniejsze potrzeby.</p>
             <ul class="help--slides-items">
                 <li>
                     <div class="col">
-                        <div class="title">Lokalna zbiórka 1</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
+                        <div class="title">{{ institution.name }}</div>
+                        <div class="subtitle">{{ institution.description }}
                         </div>
                     </div>
 
                     <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
-                        </div>
-                    </div>
-                </li>
-
-                <li>
-                    <div class="col">
-                        <div class="title">Lokalna zbiórka 2</div>
-                        <div class="subtitle">Lorem ipsum dolor sit amet
-                            consectetur.
-                        </div>
-                    </div>
-
-                    <div class="col">
-                        <div class="text">Lorem ipsum dolor sit amet consectetur
-                            adipisicing elit.
+                        <div class="text">
+                            {% for category in institution.categories.values %}
+                                {{ category.name }}
+                            {% endfor %}
                         </div>
                     </div>
                 </li>
@@ -276,6 +196,8 @@
             </ul>
             -->
         </div>
+        {% endif %}
+        {% endfor %}
     </section>
 
 {% endblock %}
