--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 {% block content %}
     <section class="login-page">
       <h2>Zaloguj się</h2>
-      <form>
+      <form action="" method="POST">
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" />
         </div>
@@ -18,8 +18,9 @@
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="#" class="btn btn--without-border">Załóż konto</a>      
-          <button class="btn" type="submit">Zaloguj się</button> 
+          <a href="{% url 'register' %}" class="btn btn--without-border">Załóż
+              konto</a>
+          <button class="btn" type="submit">Zaloguj się</button>
         </div>
       </form>
     </section>
