--- a/templates/register.html
+++ b/templates/register.html
@@ -9,12 +9,13 @@
 
     <section class="login-page">
       <h2>Załóż konto</h2>
-      <form>
+      <form action="" method="post">
+          {% csrf_token %}
         <div class="form-group">
-          <input type="text" name="name" placeholder="Imię" />
+          <input type="text" name="first_name" placeholder="Imię" />
         </div>
          <div class="form-group">
-          <input type="text" name="surname" placeholder="Nazwisko" />
+          <input type="text" name="last_name" placeholder="Nazwisko" />
         </div>
         <div class="form-group">
           <input type="email" name="email" placeholder="Email" />
