4 Login view with email backend

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,8 +9,9 @@
     <section class="login-page">
       <h2>Zaloguj się</h2>
       <form action="" method="POST">
+          {% csrf_token %}
         <div class="form-group">
-          <input type="email" name="email" placeholder="Email" />
+          <input type="text" name="username" placeholder="Email" />
         </div>
         <div class="form-group">
           <input type="password" name="password" placeholder="Hasło" />
@@ -22,6 +23,7 @@
               konto</a>
           <button class="btn" type="submit">Zaloguj się</button>
         </div>
+          <input type="hidden" name="next" value="{% url 'landing-page' %}">
       </form>
     </section>
 {% endblock %}
