--- a/templates/register.html
+++ b/templates/register.html
@@ -21,14 +21,15 @@
           <input type="email" name="email" placeholder="Email" />
         </div>
         <div class="form-group">
-          <input type="password" name="password" placeholder="Hasło" />
+          <input type="password" name="password1" placeholder="Hasło" />
         </div>
         <div class="form-group">
           <input type="password" name="password2" placeholder="Powtórz hasło" />
         </div>
 
         <div class="form-group form-group--buttons">
-          <a href="login.html" class="btn btn--without-border">Zaloguj się</a>
+          <a href="{% url 'login' %}" class="btn btn--without-border">Zaloguj
+              się</a>
           <button class="btn" type="submit">Załóż konto</button>
         </div>
       </form>
