12 Create user profile view, update profile view with password confirmation, add errors messages to forms

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -6,8 +6,29 @@
 {% endblock %}
 
 {% block content %}
+    <div>
+        {% if messages %}
+            {% for message in messages %}
+                <h2>{{ message }}</h2>
+            {% endfor %}
+        {% endif %}
+    </div>
     <section class="login-page">
       <h2>Zaloguj się</h2>
+        {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+        {% endif %}
       <form action="" method="POST">
           {% csrf_token %}
         <div class="form-group">
@@ -23,7 +44,7 @@
               konto</a>
           <button class="btn" type="submit">Zaloguj się</button>
         </div>
-          <input type="hidden" name="next" value="{% url 'landing-page' %}">
+          <input type="hidden" name="next" value="{{ request.GET.next }}">
       </form>
     </section>
 {% endblock %}
