--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,7 +5,8 @@
             <li class="logged-user">
                 Witaj {{  user.first_name }}
                     <ul class="dropdown">
-                      <li><a href="#">Profil</a></li>
+                      <li><a href="{% url 'profile' user.pk %}">Profil</a></li>
+                      <li><a href="{% url 'edit-profile' %}">Ustawienia</a></li>
                       <li><a href="#">Moje zbiórki</a></li>
                         {% if user.is_superuser %}
                             <li><a href="/admin/">Panel administracyjny</a></li>
