--- a/templates/register.html
+++ b/templates/register.html
@@ -6,9 +6,22 @@
 {% endblock %}
 
 {% block content %}
-
     <section class="login-page">
       <h2>Załóż konto</h2>
+          {% if form.errors %}
+            {% for field in form %}
+                {% for error in field.errors %}
+                    <div class="alert alert-danger">
+                        <strong>{{ error|escape }}</strong>
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                    <strong>{{ error|escape }}</strong>
+                </div>
+            {% endfor %}
+          {% endif %}
       <form action="" method="post">
           {% csrf_token %}
         <div class="form-group">
