--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,7 +7,7 @@
                     <ul class="dropdown">
                       <li><a href="{% url 'profile' user.pk %}">Profil</a></li>
                       <li><a href="{% url 'edit-profile' %}">Ustawienia</a></li>
-                      <li><a href="#">Moje zbiórki</a></li>
+                      <li><a href="{% url 'donation' %}">Moje zbiórki</a></li>
                         {% if user.is_superuser %}
                             <li><a href="/admin/">Panel administracyjny</a></li>
                         {% endif %}
