5 Handle Donation CreateForm with Ajax w/o validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,11 +2,13 @@
 <!DOCTYPE html>
 <html lang="pl">
     <head>
+        {% block head %} {% endblock %}
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
         <title>{% block title %} {% endblock %}</title>
         <link rel="stylesheet" href="{% static "css/style.css" %}"/>
+        
     </head>
 
     <body>
@@ -22,6 +24,10 @@
         {% include "footer.html" %}
     {% endblock footer %}
 
+
     <script src={% static "js/app.js" %}></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src={% static "js/csrftoken.js" %}></script>
+    <script src={% static "js/form.js" %}></script>
 
 </html>
