--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
                        data-page="{{ foundations.previous_page_number }}">{{ foundations.previous_page_number }}</a></li>
             {% endif %}
 
-              <li><a href="?foundations={{ foundations.number }}#help"
+              <li><a href="?foundations={{ foundations.number }}"
                      class="btn btn--small btn--without-border active"
                      data-page="{{ foundations.number }}">{{ fundations.number }}</a></li>
 
